# CabanaDEM

./: .gitignore  CMakeLists.txt  README.md  automate.py  visualization_paraview.py
examples/: 01SphereSphereCollision.cpp  01_elastic_normal_impact_of_two_identical_particles.cpp  02_elastic_normal_impact_of_particle_wall.cpp  03_normal_particle_wall_different_cor.cpp  04_oblique_particle_wall_different_angles.cpp  CMakeLists.txt  integrate.cpp  particle_array_creation.cpp  tst_01_BDEM_two_particles_tensile_3D.cpp  tst_01_BDEM_two_particles_tensile_3D.py  tst_01_particle_insertion.cpp  tst_02_single_particle_three_walls.cpp  tst_03_multiple_particles_contacts.cpp  tst_04_granular_dam_break_2d.cpp  utils.py
examples/inputs/: 01_elastic_normal_impact_of_two_identical_particles.json  02_elastic_normal_impact_of_particle_wall.json  03_normal_particle_wall_different_cor.json  04_oblique_particle_wall_different_angles.json  sphere_sphere_head_on_01.json  square_tri.msh  tst_03_multiple_particles_contacts.json  tst_04_granular_dam_break_2d.json
examples/python/: particle_single_trangle_intersection_test.py  sphere_stl_mesh_contact.py  visualize_mesh_pyvista.py
examples/validation_data/: 01_elastic_normal_impact_of_two_identical_particles_overlap_vs_fn_analytical_data.csv  01_elastic_normal_impact_of_two_identical_particles_time_vs_fn_analytical_data.csv  04_oblique_particle_wall_different_angles_omega_vs_incident_angle_Kharaz_Gorham_Salman_experimental_data.csv  04_oblique_particle_wall_different_angles_omega_vs_incident_angle_Lethe_DEM_data.csv
examples_postprocessing/: 01_elastic_normal_impact_of_two_identical_particles.py
pysph/: bonded_dem.py  cantilever_beam.py  example_01_pd_rectangular_body.py  example_01_two_particles_under_tension.py  example_02_pd_tensile_test_quasi_static.py  peridynamics.py  readme.md  test_bonded_dem.py  test_bonded_dem_contacts.py
src/: CMakeLists.txt  CabanaBondedDEM_Force.hpp  CabanaBondedDEM_Integrator.hpp  CabanaBondedDEM_Particles.hpp  CabanaBondedDEM_Solver.hpp  CabanaDEM.hpp  CabanaDEM_Force.hpp  CabanaDEM_Input.hpp  CabanaDEM_Integrator.hpp  CabanaDEM_Particles.hpp  CabanaDEM_Solver.hpp  CabanaDEM_Wall.hpp
