add_executable(01ElasticNormalImpactOfTwoIdenticalParticles 01_elastic_normal_impact_of_two_identical_particles.cpp)
target_link_libraries(01ElasticNormalImpactOfTwoIdenticalParticles PRIVATE cabanadem)

add_executable(02ElasticNormalImpactOfParticleWall 02_elastic_normal_impact_of_particle_wall.cpp)
target_link_libraries(02ElasticNormalImpactOfParticleWall PRIVATE cabanadem)

add_executable(03NormalParticleWallDifferentCOR 03_normal_particle_wall_different_cor.cpp)
target_link_libraries(03NormalParticleWallDifferentCOR PRIVATE cabanadem)

add_executable(04ObliqueParticleWallDifferentAngles 04_oblique_particle_wall_different_angles.cpp)
target_link_libraries(04ObliqueParticleWallDifferentAngles PRIVATE cabanadem)

add_executable(Tst01ParticleInsertion tst_01_particle_insertion.cpp)
target_link_libraries(Tst01ParticleInsertion PRIVATE cabanadem)

add_executable(Tst03MultipleParticlesContacts tst_03_multiple_particles_contacts.cpp)
target_link_libraries(Tst03MultipleParticlesContacts PRIVATE cabanadem)


install(TARGETS 01ElasticNormalImpactOfTwoIdenticalParticles
  02ElasticNormalImpactOfParticleWall
  03NormalParticleWallDifferentCOR
  04ObliqueParticleWallDifferentAngles
  Tst01ParticleInsertion
  Tst03MultipleParticlesContacts
  DESTINATION ${CMAKE_INSTALL_BINDIR})


add_definitions(-w)
